IMPALA-1894: Fix old aggregation node hash table cleanup

The old aggregation node would allocate tuples from the same
mem pool that was being freed during cleanup. The cleanup code
would free all pool memory between calls to Finalize(), which
could free the memory of tuples that haven't been cleaned up
yet. This avoids having to free the mem pool by only allocating
a single output tuple and re-using it.

Change-Id: I0cde82b671210015e8cc20ee3d6563a9206d503a
Reviewed-on: http://gerrit.cloudera.org:8080/282
Reviewed-by: Skye Wanderman-Milne <skye@cloudera.com>
Tested-by: Internal Jenkins
Reviewed-on: http://gerrit.cloudera.org:8080/287
Reviewed-by: Ishaan Joshi <ishaan@cloudera.com>